--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <meta data-rh="true" name="docsearch:language" content="en">
   <meta data-rh="true" name="docsearch:docusaurus_tag" content="default">
   <meta data-rh="true" property="og:title" content="Khanna Radio | THE HOUSE OF ELECTRONICS | Wholesale Manufacturer and Seller">
-  <meta data-rh="true" name="description" content="Khanna Radio: Your one-stop shop for premium electronics at unbeatable prices. Discover a wide range of cutting-edge products, from smart TVs to top-quality speakers, all backed by our outstanding service. Elevate your lifestyle with Khanna Raadio.">
+  <meta data-rh="true" name="description" content="Khanna Radio: Your one-stop shop for premium electronics at unbeatable prices. Discover a wide range of cutting-edge products, from smart TVs to top-quality speakers, all backed by our outstanding service. Elevate your lifestyle with Khanna Radio.">
   <meta data-rh="true" property="og:description" content="Khanna Radio: Shop the latest electronics at amazing prices. Discover smart TVs, speakers, headphones, and more from top brands like : Micropolo,F&D, Samsung, LG, and Sony.">
   <link rel="canonical" href="https://khannaradio.netlify.app/">
 
@@ -44,7 +44,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!-- code will be in jected directly from dom -->
+  <!-- code will be in rejected directly from dom -->
 </body>
 
 </html>
