final fix index added more meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,14 @@
   <meta data-rh="true" name="docusaurus_tag" content="default">
   <meta data-rh="true" name="docsearch:language" content="en">
   <meta data-rh="true" name="docsearch:docusaurus_tag" content="default">
-  <meta data-rh="true" property="og:title" content="Khanna Radio | THE HOUSE OF ELECTRONICS | Wholesale Manufacturer and Seller">
   <meta data-rh="true" name="description" content="Khanna Radio: Your one-stop shop for premium electronics at unbeatable prices. Discover a wide range of cutting-edge products, from smart TVs to top-quality speakers, all backed by our outstanding service. Elevate your lifestyle with Khanna Radio.">
-  <meta data-rh="true" property="og:description" content="Khanna Radio: Shop the latest electronics at amazing prices. Discover smart TVs, speakers, headphones, and more from top brands like : Micropolo,F&D, Samsung, LG, and Sony.">
   <link rel="canonical" href="https://khannaradio.netlify.app/">
-
+  <meta data-rh="true" property="og:title" content="Khanna Radio | THE HOUSE OF ELECTRONICS | Wholesale Manufacturer and Seller">
+  <meta data-rh="true" property="og:description" content="Khanna Radio: Shop the latest electronics at amazing prices. Discover smart TVs, speakers, headphones, and more from top brands like : Micropolo,F&D, Samsung, LG, and Sony.">
+  <meta property="og:image" content="https://khannaradio.netlify.app/static/media/logo.843b78be02ea354643be.png">
+  <meta property="og:url" content="https://khannaradio.netlify.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Khanna Radio">
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
